--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ attrs==24.2.0
 black==24.8.0
 click==8.1.7
 colorama==0.4.6
+coverage==7.6.1
 Django==4.0.4
 django-debug-toolbar==3.4.0
 djangorestframework==3.13.1
@@ -18,6 +19,7 @@ packaging==24.1
 pathspec==0.12.1
 pillow==10.4.0
 platformdirs==4.2.2
+psycopg2-binary==2.9.9
 pycodestyle==2.9.1
 pyflakes==2.5.0
 PyJWT==2.9.0
